[gd_scene load_steps=24 format=2]

[ext_resource path="res://MainScene/Player.gd" type="Script" id=1]
[ext_resource path="res://MainScene/assets/nuaj2.png" type="Texture" id=2]
[ext_resource path="res://MainScene/assets/tilemap.png" type="Texture" id=3]
[ext_resource path="res://MainScene/assets/nuaj1.png" type="Texture" id=4]
[ext_resource path="res://MainScene/assets/nuaj3.png" type="Texture" id=5]
[ext_resource path="res://MainScene/assets/edgarcourt3.png" type="Texture" id=6]
[ext_resource path="res://MainScene/assets/edgarcourt1.png" type="Texture" id=7]
[ext_resource path="res://Tasse/tasse.tscn" type="PackedScene" id=8]
[ext_resource path="res://MainScene/assets/edgarcourt2.png" type="Texture" id=9]
[ext_resource path="res://MainScene/assets/edgarcourt4.png" type="Texture" id=10]
[ext_resource path="res://MainScene/assets/edgarquiboit1.png" type="Texture" id=11]
[ext_resource path="res://MainScene/assets/edgarquiboit2.png" type="Texture" id=12]
[ext_resource path="res://MainScene/assets/edgarquicourtpas.png" type="Texture" id=13]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=14]
[ext_resource path="res://Pics/Pics.tscn" type="PackedScene" id=15]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 96, 96, 0, 96, 0, 0, 96, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 96, 96, 0, 96, 0, 0, 96, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 96, 96, 0, 96, 0, 0, 96, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 96, 96, 0, 96, 0, 0, 96, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 96, 96, 0, 96, 0, 0, 96, 0 )

[sub_resource type="TileSet" id=5]
1/name = "tilemap.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 0, 96, 96 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tilemap.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 96, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 2 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tilemap.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 0, 96, 96 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tilemap.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 288, 0, 96, 96 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tilemap.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 96, 96, 96 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 3 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tilemap.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 96, 96, 96, 96 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 4 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tilemap.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 288, 96, 96, 96 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tilemap.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 192, 96, 96, 96 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "tilemap.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 192, 96, 96 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "tilemap.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 96, 192, 96, 96 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 9 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 30.3238, 60.5227 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 4.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "drink",
"speed": 0.2
} ]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 14 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Node2D" parent="CanvasLayer/HUD" instance=ExtResource( 8 )]
position = Vector2( 454.825, -111.1 )

[node name="Node2D6" parent="." instance=ExtResource( 8 )]
position = Vector2( 4981.54, -837.521 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( -1048487, 6, 0, -1048486, 5, 0, -983031, 1, 0, -983030, 1, 0, -983029, 1, 0, -983028, 1, 0, -983027, 1, 0, -983026, 1, 0, -983025, 1, 0, -983024, 1, 0, -983023, 1, 0, -983022, 1, 0, -983021, 1, 0, -983020, 1, 0, -982958, 6, 0, -982957, 2, 0, -982956, 2, 0, -982955, 5, 0, -982950, 1, 0, -917497, 1, 0, -917496, 1, 0, -917495, 1, 0, -917494, 1, 0, -917493, 1, 0, -917492, 1, 0, -917491, 1, 0, -917490, 1, 0, -917489, 1, 0, -917488, 1, 0, -917487, 1, 0, -917486, 1, 0, -917485, 1, 0, -917484, 1, 0, -917483, 1, 0, -917422, 1, 0, -917414, 1, 0, -851963, 1, 0, -851962, 1, 0, -851961, 1, 0, -851960, 1, 0, -851959, 1, 0, -851958, 1, 0, -851957, 1, 0, -851956, 1, 0, -851955, 1, 0, -851954, 1, 0, -851953, 1, 0, -851952, 1, 0, -851951, 1, 0, -851950, 1, 0, -851949, 1, 0, -851948, 1, 0, -851947, 1, 0, -851912, 3, 0, -851911, 4, 0, -851910, 3, 0, -851909, 3, 0, -851908, 4, 0, -851903, 6, 0, -851902, 2, 0, -851901, 5, 0, -851886, 1, 0, -851878, 1, 0, -786429, 1, 0, -786428, 1, 0, -786427, 1, 0, -786426, 1, 0, -786425, 1, 0, -786424, 1, 0, -786423, 1, 0, -786422, 1, 0, -786421, 1, 0, -786420, 1, 0, -786419, 1, 0, -786418, 1, 0, -786417, 1, 0, -786416, 1, 0, -786415, 1, 0, -786414, 1, 0, -786413, 1, 0, -786412, 1, 0, -786411, 1, 0, -786377, 6, 0, -786376, 2, 0, -786375, 2, 0, -786374, 2, 0, -786373, 2, 0, -786372, 2, 0, -786371, 5, 0, -786363, 6, 0, -786362, 2, 0, -786361, 5, 0, -786350, 1, 0, -786345, 6, 0, -786344, 2, 0, -786343, 2, 0, -786342, 1, 0, -720895, 1, 0, -720894, 1, 0, -720893, 1, 0, -720892, 1, 0, -720891, 1, 0, -720890, 1, 0, -720889, 1, 0, -720888, 1, 0, -720887, 1, 0, -720886, 1, 0, -720885, 1, 0, -720884, 1, 0, -720883, 1, 0, -720882, 1, 0, -720881, 1, 0, -720880, 1, 0, -720879, 9, 0, -720878, 9, 0, -720876, 9, 0, -720875, 1, 0, -720852, 8, 0, -720851, 3, 0, -720850, 4, 0, -720849, 3, 0, -720848, 7, 0, -720842, 6, 0, -720841, 1, 0, -720840, 1, 0, -720839, 1, 0, -720838, 1, 0, -720837, 1, 0, -720836, 1, 0, -720835, 1, 0, -720834, 5, 0, -720814, 1, 0, -720809, 1, 0, -589825, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -655357, 1, 0, -655356, 1, 0, -655355, 1, 0, -655354, 1, 0, -655353, 1, 0, -655352, 1, 0, -655351, 1, 0, -655350, 1, 0, -655349, 1, 0, -655348, 1, 0, -655347, 1, 0, -655346, 1, 0, -655345, 1, 0, -655344, 9, 0, -655339, 9, 0, -655317, 8, 0, -655316, 6, 0, -655315, 2, 0, -655314, 2, 0, -655313, 2, 0, -655312, 5, 0, -655311, 7, 0, -655306, 1, 0, -655305, 1, 0, -655304, 1, 0, -655303, 1, 0, -655302, 1, 0, -655301, 1, 0, -655300, 1, 0, -655299, 1, 0, -655298, 1, 0, -655278, 1, 0, -655277, 5, 0, -655273, 1, 0, -524291, 1, 0, -524290, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -589821, 1, 0, -589820, 1, 0, -589819, 1, 0, -589818, 1, 0, -589817, 1, 0, -589816, 1, 0, -589815, 1, 0, -589814, 1, 0, -589813, 1, 0, -589812, 1, 0, -589811, 1, 0, -589810, 1, 0, -589809, 9, 0, -589781, 6, 0, -589780, 1, 0, -589779, 1, 0, -589778, 1, 0, -589777, 1, 0, -589776, 1, 0, -589775, 5, 0, -589770, 1, 0, -589769, 1, 0, -589767, 1, 0, -589766, 1, 0, -589765, 1, 0, -589763, 1, 0, -589762, 1, 0, -589749, 4, 0, -589742, 1, 0, -589737, 1, 0, -458756, 1, 0, -458755, 1, 0, -458754, 1, 0, -458753, 1, 0, -524288, 1, 0, -524287, 1, 0, -524286, 1, 0, -524285, 1, 0, -524284, 1, 0, -524283, 1, 0, -524282, 1, 0, -524281, 1, 0, -524280, 1, 0, -524279, 1, 0, -524278, 1, 0, -524277, 1, 0, -524276, 1, 0, -524275, 1, 0, -524274, 9, 0, -524245, 1, 0, -524244, 1, 0, -524242, 1, 0, -524240, 1, 0, -524239, 1, 0, -524237, 6, 0, -524236, 5, 0, -524234, 1, 0, -524230, 1, 0, -524226, 1, 0, -524215, 6, 0, -524214, 2, 0, -524213, 5, 0, -524206, 1, 0, -524202, 6, 0, -524201, 1, 0, -393221, 1, 0, -393220, 1, 0, -393219, 1, 0, -393218, 1, 0, -393217, 1, 0, -458752, 1, 0, -458751, 1, 0, -458750, 1, 0, -458749, 1, 0, -458748, 1, 0, -458747, 1, 0, -458746, 1, 0, -458745, 9, 0, -458744, 9, 0, -458743, 9, 0, -458742, 1, 0, -458741, 1, 0, -458740, 1, 0, -458739, 9, 0, -458734, 6, 0, -458733, 5, 0, -458709, 1, 0, -458708, 1, 0, -458707, 1, 0, -458706, 1, 0, -458705, 1, 0, -458704, 1, 0, -458703, 1, 0, -458701, 9, 0, -458700, 9, 0, -458698, 1, 0, -458690, 1, 0, -458683, 4, 0, -458670, 1, 0, -458665, 1, 0, -327685, 1, 0, -327684, 1, 0, -327683, 1, 0, -327682, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -393213, 1, 0, -393212, 1, 0, -393211, 1, 0, -393210, 9, 0, -393206, 9, 0, -393205, 1, 0, -393204, 1, 0, -393199, 6, 0, -393198, 1, 0, -393197, 1, 0, -393196, 2, 0, -393195, 5, 0, -393177, 6, 0, -393176, 5, 0, -393173, 1, 0, -393171, 1, 0, -393170, 1, 0, -393169, 1, 0, -393167, 1, 0, -393162, 1, 0, -393161, 1, 0, -393155, 1, 0, -393154, 1, 0, -393148, 6, 0, -393147, 2, 0, -393146, 5, 0, -393134, 1, 0, -393133, 5, 0, -393129, 1, 0, -262149, 1, 0, -262148, 1, 0, -262147, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -327675, 9, 0, -327669, 9, 0, -327668, 1, 0, -327667, 3, 0, -327666, 3, 0, -327665, 3, 0, -327664, 6, 0, -327663, 1, 0, -327662, 9, 0, -327661, 9, 0, -327660, 9, 0, -327659, 9, 0, -327656, 3, 0, -327655, 3, 0, -327654, 3, 0, -327653, 3, 0, -327642, 6, 0, -327641, 1, 0, -327640, 1, 0, -327637, 1, 0, -327636, 1, 0, -327632, 1, 0, -327631, 1, 0, -327626, 1, 0, -327625, 1, 0, -327624, 1, 0, -327620, 1, 0, -327619, 1, 0, -327618, 1, 0, -327598, 1, 0, -327593, 1, 0, -196613, 1, 0, -196612, 1, 0, -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 9, 0, -262141, 9, 0, -262140, 9, 0, -262132, 1, 0, -262131, 2, 0, -262130, 2, 0, -262129, 2, 0, -262128, 1, 0, -262127, 1, 0, -262122, 8, 0, -262121, 6, 0, -262120, 2, 0, -262119, 2, 0, -262118, 2, 0, -262117, 5, 0, -262106, 1, 0, -262105, 1, 0, -262104, 1, 0, -262101, 1, 0, -262100, 1, 0, -262099, 1, 0, -262098, 1, 0, -262097, 1, 0, -262096, 1, 0, -262095, 1, 0, -262090, 1, 0, -262089, 1, 0, -262088, 1, 0, -262087, 1, 0, -262085, 1, 0, -262084, 1, 0, -262083, 1, 0, -262082, 1, 0, -262062, 1, 0, -262058, 6, 0, -262057, 1, 0, -131077, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 9, 0, -196596, 9, 0, -196595, 9, 0, -196594, 9, 0, -196593, 9, 0, -196592, 9, 0, -196591, 9, 0, -196587, 8, 0, -196586, 6, 0, -196585, 1, 0, -196584, 1, 0, -196583, 1, 0, -196582, 1, 0, -196581, 1, 0, -196570, 1, 0, -196569, 1, 0, -196568, 1, 0, -196565, 1, 0, -196564, 1, 0, -196563, 1, 0, -196562, 1, 0, -196561, 1, 0, -196560, 1, 0, -196559, 1, 0, -196554, 1, 0, -196553, 1, 0, -196552, 1, 0, -196551, 1, 0, -196550, 1, 0, -196549, 1, 0, -196548, 1, 0, -196547, 1, 0, -196546, 1, 0, -196545, 3, 0, -196544, 3, 0, -196526, 1, 0, -196521, 1, 0, -65541, 1, 0, -65540, 1, 0, -65539, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131052, 8, 0, -131051, 6, 0, -131050, 1, 0, -131049, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -131045, 1, 0, -131034, 1, 0, -131033, 1, 0, -131032, 1, 0, -131029, 1, 0, -131028, 1, 0, -131027, 1, 0, -131026, 1, 0, -131025, 1, 0, -131024, 1, 0, -131023, 1, 0, -131018, 1, 0, -131017, 1, 0, -131016, 1, 0, -131015, 1, 0, -131014, 1, 0, -131013, 1, 0, -131012, 1, 0, -131011, 1, 0, -131010, 1, 0, -131009, 2, 0, -131008, 2, 0, -131007, 5, 0, -131005, 3, 0, -131004, 4, 0, -131003, 4, 0, -131002, 4, 0, -131001, 4, 0, -131000, 3, 0, -130999, 3, 0, -130998, 3, 0, -130997, 3, 0, -130990, 1, 0, -130989, 5, 0, -130985, 1, 0, -5, 1, 0, -4, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 4, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65524, 8, 0, -65523, 4, 0, -65522, 4, 0, -65521, 4, 0, -65520, 4, 0, -65519, 7, 0, -65516, 6, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65498, 1, 0, -65497, 1, 0, -65496, 1, 0, -65471, 1, 0, -65470, 2, 0, -65469, 2, 0, -65468, 2, 0, -65467, 2, 0, -65466, 2, 0, -65465, 2, 0, -65464, 2, 0, -65463, 2, 0, -65462, 2, 0, -65461, 2, 0, -65460, 5, 0, -65449, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 5, 0, 12, 6, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 5, 0, 19, 6, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 86, 6, 0, 87, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65574, 1, 0, 65575, 1, 0, 65576, 1, 0, 65616, 6, 0, 65617, 2, 0, 65618, 2, 0, 65619, 2, 0, 65620, 2, 0, 65621, 2, 0, 65622, 1, 0, 65623, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131111, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 393212, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327699, 1, 0, 327700, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393235, 1, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 200, -60 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 6.25513, -30.9157 )
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 8.99998, -1.47731 )
shape = SubResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 11.9377, -5.51098 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 8 )
animation = "run"
playing = true

[node name="CoffeeTimer" type="Timer" parent="Player"]

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_offset = Vector2( 50, 0 )

[node name="nuaj1" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 727.155, -332.495 )
texture = ExtResource( 4 )

[node name="nuaj2" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 2517.44, -776.249 )
texture = ExtResource( 4 )

[node name="nuaj3" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1561.99, -729.923 )
texture = ExtResource( 2 )

[node name="nuaj4" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1057.45, -467.563 )
texture = ExtResource( 5 )

[node name="nuaj5" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 3007.48, -340.68 )
scale = Vector2( 1.67764, 1.7955 )
texture = ExtResource( 5 )

[node name="nuaj1" type="Sprite" parent="ParallaxBackground2/ParallaxLayer/nuaj5"]
position = Vector2( 109.587, 252.834 )
scale = Vector2( 0.689738, 0.696428 )
texture = ExtResource( 4 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_offset = Vector2( -500, 0 )

[node name="nuaj6" type="Sprite" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2( 5070.58, -1517.61 )
texture = ExtResource( 2 )

[node name="nuaj1" type="Sprite" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2( 380.462, -311.202 )
texture = ExtResource( 4 )

[node name="nuaj2" type="Sprite" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2( 703.731, -681.614 )
texture = ExtResource( 2 )

[node name="nuaj3" type="Sprite" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2( 3357.33, -840.183 )
scale = Vector2( 1.76034, 1.47194 )
texture = ExtResource( 4 )

[node name="nuaj4" type="Sprite" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2( 3836, -1138.02 )
texture = ExtResource( 4 )

[node name="nuaj5" type="Sprite" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2( 3362.83, -1353.23 )
scale = Vector2( 1.47087, 1.41937 )
texture = ExtResource( 5 )

[node name="Node2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 1340.49, -479.256 )

[node name="Node2D2" parent="." instance=ExtResource( 8 )]
position = Vector2( 8532.78, -1250.86 )

[node name="Node2D3" parent="." instance=ExtResource( 15 )]
position = Vector2( 6096.06, -240.204 )

[node name="Node2D4" parent="." instance=ExtResource( 15 )]
position = Vector2( 6191.39, -240.204 )

[node name="Node2D5" parent="." instance=ExtResource( 15 )]
position = Vector2( 6930.33, -143.022 )
[connection signal="animation_finished" from="Player/Sprite" to="Player" method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Player/CoffeeTimer" to="Player" method="_on_CoffeeTimer_timeout"]
